starts unit tests for the jdbc query plugin. unfortunately blocked until the plugin parameter input parsing mechanism is addressed